# prml

./: .commit_template  pyproject.toml
notebooks/: ch01_Introduction.ipynb  ch02_Probability_Distributions.ipynb  ch03_Linear_Models_for_Regression.ipynb  ch04_Linear_Models_for_Classfication.ipynb  ch05_Neural_Networks.ipynb  ch06_Kernel_Methods.ipynb  ch07_Sparse_Kernel_Machines.ipynb  ch08_Graphical_Models.ipynb  ch09_Mixture_Models_and_EM.ipynb  ch10_Approximate_Inference.ipynb  ch11_Sampling_Methods.ipynb  ch12_Continuous_Latent_Variables.ipynb  ch13_Sequential_Data.ipynb
prml/linear/: _fishers_linear_discriminant.py
prml/rv/: bernoulli.py
