[tool.poetry]
name = "prml"
version = "0.1.0"
description = ""
authors = ["naoki <74347818+C-naoki@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.0"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
jupyter = "^1.0.0"
ipykernel = "^6.24.0"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
